@@ -212,6 +212,12 @@ namespace libtorrent
 
 		file_entry at(int index) const;
 		file_entry at(iterator i) const;
+		internal_file_entry const& internal_at(int index) const
+		{
+			TORRENT_ASSERT(index >= 0);
+			TORRENT_ASSERT(index < int(m_files.size()));
+			return m_files[index];
+		}
 
 		size_type total_size() const { return m_total_size; }
 		void set_num_pieces(int n) { m_num_pieces = n; }
